# samplecustproj

./: .gitignore  Dockerfile  README.md  pyproject.toml
CustomerManagement/: .env  .env.prod
CustomerManagement/Authentication/: serializer.py  urls.py  views.py
CustomerManagement/Customer/: models.py  request_objects.py  serializer.py  urls.py  utils.py  views.py
CustomerManagement/Customer/migrations/: 0001_initial.py
CustomerManagement/CustomerManagement/: basesettings.py  settings.py  urls.py
